@@ -1,6 +1,7 @@
 ags (3.0.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved ags_audio_start() and ags_channel_start() to have sync timeout
 	* fixed some issues from build log
 
 ags (3.0.3)
